Text history pop-up working

--- a/server/dashboard/static/dashboard/style.css
+++ b/server/dashboard/static/dashboard/style.css
@@ -13,7 +13,7 @@ table th, table td {
     white-space: nowrap;
 }
 
-table td a.sms-btn:hover {
+table td a.sms-btn:hover, a.texthx-btn:hover {
     font-weight: bold;
 }
 
