--- a/server/dashboard/templates/dashboard/index.html
+++ b/server/dashboard/templates/dashboard/index.html
@@ -4,8 +4,8 @@
         {% load static %}
         {% load template_filters %}
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static 'dashboard/style.css' %}" >
         <title>Dashboard</title>
@@ -23,7 +23,6 @@
             // Copy text history details to modal form
             $(function () {
                 $('.texthx-btn').on('click', function () {
-                    console.log( $(this).val() );
                     let heartsteps_id = $(this).data('text');
                     let body_field = $('#text-history');
                     $.ajax({
@@ -33,8 +32,16 @@
                         },
                         dataType: 'json',
                         success: function(data) {
-                            alert("something");
-                            body_field.val(data);
+                            let text_hx = JSON.parse(data);
+                            let textContent = new String();
+                            for (const msg of text_hx) {
+                                direction = (msg.fields.recipient == '+12063503346' ?
+                                    'Received: ' : 'Sent: ');
+                                let text_dt = msg.fields.created.substring(0, 10);
+                                textContent += (direction + text_dt + '\n\n');
+                                textContent += (msg.fields.body += '\n\n\n');
+                            }
+                            body_field.val(textContent);
                         }
                     });
                 });
