Added baseline page to lock application behavior

--- a/client/src/theme/logo.scss
+++ b/client/src/theme/logo.scss
@@ -1,10 +1,10 @@
 
 .heartsteps-logo {
     display: block;
-    position: relative !important;
+    position: relative;
     text-indent: -3000px;
-    width: 300px !important;
-    height: 55px !important;
+    width: 300px;
+    height: 55px;
     overflow: hidden;
     margin: 2em auto;
     &:after {
