--- a/client/src/theme/variables.scss
+++ b/client/src/theme/variables.scss
@@ -41,7 +41,7 @@ $color-gray-light: #f4f4f4;
 $color-gray: #a4a4a4;
 $color-gray-dark: #3d3d3d;
 $color-white: #ffffff;
-$color-block: #000000;
+$color-black: #000000;
 
 $colors: (
   primary:    $color-primary,
