--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -2,11 +2,16 @@
     <nav>
         <ul>
             <li><button (click)="editContactInformation()">Contact information</button></li>
-            <li><button (click)="editNotifications()">Notifications</button></li>
             <li><button (click)="editPlaces()">Places</button></li>
             <li><button (click)="editWeeklyReflectionTime()">Weekly reflection time</button></li>
             <li><button (click)="editWeeklyGoal()">Weekly goal</button></li>
             <li><button (click)="editDailyTimes()">Activity suggestion time</button></li>
+        </ul>
+    </nav>
+    <nav>
+        <ul>
+            <li><button (click)="editNotifications()">Notifications</button></li>
+            <li><button (click)="editFitbitAuthorization()">Fitbit Authorization</button></li>
         </ul>
     </nav>
     <p>HeartSteps {{buildVersion}}, built on {{buildDate}}</p>
