Add fitbit watch settings page

--- a/client/src/pages/settings/settings.component.html
+++ b/client/src/pages/settings/settings.component.html
@@ -12,6 +12,7 @@
         <ul>
             <li><button (click)="editNotifications()">Notifications</button></li>
             <li><button (click)="editFitbitAuthorization()">Fitbit Authorization</button></li>
+            <li><button (click)="editFitbitWatch()">HeartSteps Clockface</button></li>
         </ul>
     </nav>
     <p>HeartSteps {{buildVersion}}, built on {{buildDate}}</p>
