Changed text in watch setup

--- a/client/src/heartsteps/fitbit-watch/watch-setup.component.html
+++ b/client/src/heartsteps/fitbit-watch/watch-setup.component.html
@@ -1,5 +1,6 @@
-<p>HeartSteps requires the HeartSteps clock face to be setup to send real-time activity suggestions.</p>
-<p>To install the HeartSteps clock face, click the button below and follow the steps on the clock face to authenticate with HeartSteps.</p>
+<p style="color: #AA0000; font-weight:bold;">PLEASE DO NOT SKIP THIS STEP</p>
+<p>The HeartSteps study clock face <strong>must be installed</strong> on your Fitbit to send real-time activity suggestions. It is important for our research for you to install and keep the HeartSteps clock face on your Fitbit while you are in the study.</p>
+<p>Please install by clicking the button below. Follow the steps in your guide to fully activate the clock face. Your Fitbit needs to be close to your phone when you complete this step.</p>
 <button (click)="openFitbitPage()" class="heartsteps-primary-button">Install Clock Face</button>
 <p>When you have setup your watch, click done below.</p>
 <button (click)="markDone()">Done</button>
