--- a/server/dashboard/templates/dashboard/participant.html
+++ b/server/dashboard/templates/dashboard/participant.html
@@ -11,6 +11,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm">
+            <h3>Participant Information</h3>
             <dl>
                 <dt>HeartSteps ID</dt>
                 <dd>{{participant.heartsteps_id}}</dd>
@@ -19,22 +20,14 @@
                 <dt>Birth year</dt>
                 <dd>{{participant.birth_year}}</dd>
             </dl>
-            <form action="{% url 'dashboard-cohort-participant-notifications' cohort.id participant.heartsteps_id %}" method="POST">
-                {% csrf_token %}
-                <input type="hidden" name="message" value="Hi, this is a test message." />
-                <input type="submit" value="Send test notification" />
-            </form>
+            <a href="{% url 'dashboard-cohort-participant-edit' cohort.id participant.heartsteps_id %}"
+                >
+                Edit participant information
+            </a>
         </div>
         <div class="col-sm">
             <nav>
                 <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link"
-                            href="{% url 'dashboard-cohort-participant-edit' cohort.id participant.heartsteps_id %}"
-                            >
-                            Edit participant
-                        </a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link"
                             href="{% url 'dashboard-cohort-participant-sms-messages' cohort.id participant.heartsteps_id %}"
@@ -44,7 +37,40 @@
                     </li>
                 </ul>
             </nav>
+
+            <form action="{% url 'dashboard-cohort-participant-notifications' cohort.id participant.heartsteps_id %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="message" value="Hi, this is a test message." />
+                <input type="submit" value="Send test notification" />
+            </form>
         </div>
+    </div>
+    <div class="row">
+        <h3>Intervention Summary</h3>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Time range</th>
+                    <th>Anti-Sedentary Suggestions</th>
+                    <th>Walking Suggestions</th>
+                </tr>
+            </thead>
+            {% for range in intervention_summaries %}
+                <tr>
+                    <th>{{range.title}}</th>
+                    <td>
+                        {{range.anti_sedentary_messages}} messages sent.
+                        <br />
+                        {{ range.anti_sedentary_availability | floatformat:2 }} availablity for {{range.anti_sedentary_decisions}} decisions.
+                    </td>
+                    <td>
+                        {{ range.walking_suggestion_messages }} messages sent.
+                        <br />
+                        {{ range.walking_suggestion_availability | floatformat:2 }} of {{range.walking_suggestion_decisions}} decisions.
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
     </div>
 </div>
 {% endblock %}
