--- a/server/dashboard/templates/dashboard/participants.html
+++ b/server/dashboard/templates/dashboard/participants.html
@@ -3,6 +3,7 @@
 {% load template_filters %}
 
 {% block navigation %}
-<a href="{% url 'dashboard-cohort-participants' cohort.id %}" class="nav-link">{{cohort.name}}</a>
+<a href="{% url 'dashboard-cohort-participants' cohort.id %}" class="nav-link active">{{cohort.name}}</a>
 <a href="{% url 'dashboard-cohort-participant-create' cohort.id %}" class="nav-link">Add participant</a>
+<a href="{% url 'dashboard-cohort-intervention-summary' cohort.id %}" class="nav-link">Intervention Summaries</a>
 {% endblock %}
