#103 Add availability to dashboard

--- a/server/dashboard/templates/dashboard/intervention-summary.page.html
+++ b/server/dashboard/templates/dashboard/intervention-summary.page.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-
+{{availability}}
 <h2>Intervention Summary for {{cohort.name}}</h2>
 {% include "dashboard/intervention-summary.table.html" %}
 
